# Louder-ESP32-Airplay2

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/boards/esp32s3-generic/: iot_board.h
components/boards/squeezeamp/: board.c
main/: CMakeLists.txt  idf_component.yml
main/hap/: hap_pair_verify.c
